refactoring - add support for serving size - rest style guide: wrap actual result in 'data' object - code formatting
