# backend/food/swagger.yaml
@@ -1,8 +1,8 @@
 swagger: "2.0"
 info:
-  description: This is the swagger file that goes with our server code
+  description: Access to food tracker service
   version: "1.0.0"
-  title: Swagger REST Article
+  title: Food tracker API
 consumes:
   - "application/json"
 produces:
@@ -52,52 +52,68 @@ paths:
               kcal:
                 type: integer
 
-  /energy:
+  /energy/calculate:
     get:
-      operationId: food.rest_api.get_energy
+      operationId: food.rest_api.calculate_energy
       tags:
         - energy
       parameters:
         - name: fats
           in: query
-          description: fats in grams
+          description: fats [g] per 100g
           type: number
           minimum: 0
           default: 0
         - name: carbs
           in: query
-          description: carbohydrate in grams
+          description: carbs [g] per 100g
           type: number
           minimum: 0
           default: 0
-        - name: prots
+        - name: proteins
           in: query
-          description: proteins in grams
+          description: proteins [g] per 100g
           type: number
           minimum: 0
           default: 0
+        - name: multiplier
+          in: query
+          description: multiplier to scale the 100g reference
+          type: number
+          minimum: 0
+          default: 1.0
       responses:
         200:
-          description: calories
+          description: calories of the serving
           schema:
             properties:
-              kcal:
+              data:
                 type: object
                 properties:
-                  fats:
-                    type: number
-                  carbs:
-                    type: number
-                  prots:
-                    type: number
-                  total:
-                    type: number
-              kcal_percent:
-                type: object
-                properties:
-                  fats:
-                    type: number
-                  carbs:
-                    type: number
-                  prots:
-                    type: number
+                  calories:
+                    description: calories [kcal]
+                    $ref: '#/definitions/Macros'
+                  serving:
+                    description: serving size [g]
+                    $ref: '#/definitions/Macros'
+
+definitions:
+  Macros:
+    type: object
+    required:
+      - fats
+      - carbs
+      - proteins
+    properties:
+      fats:
+        type: number
+        description: fats
+        example: 123
+      carbs:
+        type: number
+        description: fats
+        example: 123
+      proteins:
+        type: number
+        description: fats
+        example: 123
